# psychbot

./: .env  .env.example  README.md  app.py  chainlit.md  pyproject.toml
.chainlit/: config.toml
backend/: __init__.py  main.py
contexts/: feedback_generator.context.yaml  interviewer.context.yaml  scorer.context.yaml
data/cache/: embeddings_cache.pkl
data/sessions/: sessions.db
data/vector_db/: chroma.sqlite3  interview_knowledge.index  interview_knowledge.pkl
docs/concepts/: data_science_concepts.md  software_engineering_concepts.md
docs/interview_questions/: data_scientist_junior.md  data_scientist_mid.md  data_scientist_senior.md  software_engineer_junior.md  software_engineer_mid.md  software_engineer_senior.md
docs/job_rubrics/: data_scientist_rubric.yaml.txt  software_engineer_rubric.txt
public/: style.css
reports/: data_scientist_candidate_20250826_230146.json
scripts/: __init__.py  ask_question.py  comprehensive_evaluator.py  generate_feedback.py  generate_report.py  rag_retriever.py  score_answer.py
tests/: test_config.py  test_rag_retriever.py
